Remade login button design

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: montserrat, sans-serif;
+  text-align: center;
   color: white;
+  background: #3e3e42;
 }
 
 .loginInput {
@@ -41,7 +43,7 @@
 }
 
 .loginButton:hover {
-  background-color: #00558E;
+  background-color: #00558e;
 }
 
 .App {
