--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -20,6 +20,7 @@
 }
 
 .login-wrapper p {
+  padding: 10px;
   font-size: 20px;
 }
 
@@ -39,6 +40,9 @@
 
 .loginInput:focus {
   box-shadow: 0px 2px 1px rgb(30, 30, 30);
+}
+.button-wrapper {
+  padding: 20px;
 }
 
 .loginButton {
