--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -8,3 +8,15 @@
 .textContainer {
   font-size: 20px;
 }
+
+.link {
+  color:white;
+  font-weight: 900;
+  font-size: 60px;
+  height: 40vh;
+}
+
+.welcome {
+  color:black;
+  font-size: 50px;
+}
