--- a/src/components/Forms/Insert/Insert.css
+++ b/src/components/Forms/Insert/Insert.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap%22");
 
+* {
+  color:antiquewhite;
+}
+
 .artpiece {
   background: #2d2d30;
   border-radius: 8px;
