--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,6 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-shadow: 0px 2px 3px rgb(30, 30, 30);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("https://images.unsplash.com/photo-1617360547704-3da8b5363369?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  background-size: cover;
 }
 
 .textContainer {
@@ -10,13 +14,13 @@
 }
 
 .link {
-  color:white;
-  font-weight: 900;
+  color: white;
   font-size: 60px;
   height: 40vh;
+  list-style: none;
 }
 
 .welcome {
-  color:black;
+  color: white;
   font-size: 50px;
 }
