--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@
   padding: 0;
   font-family: montserrat, sans-serif;
   text-align: center;
-  color: white;
+  z-index: 1;
 }
 
 .login {
@@ -20,5 +20,4 @@
 .app {
   height: 100vh;
   background-color: #1e1e1e;
-  
 }
